# VisionICeIO

./: .gitignore  2026_05_25_VisionICeNatal_VisionICeIO_7673b676_failed.txt  README.md  pyproject.toml  requirements.txt
.github/workflows/: docs.yml  lint.yml  tests.yml
configs/: plot_style.mplstyle
docs/: CHANGELOG.md  Makefile  api.rst  conf.py  data_format.md  developer.rst  index.rst
docs/_static/: custom.css
example_scripts/: 2025_05_29_experiment_overview.ipynb
examples/: example_data_loading.ipynb  real_data_exploration.ipynb
tests/: test_experiment.py  test_io_helpers.py  test_io_readers.py  test_rng_policy.py
visioniceio/: __init__.py  core_io.py  experiment.py
visioniceio/io/: __init__.py  _helpers.py  analog.py  behaviour.py  metadata.py  sorting.py  spike.py  stim.py  waveform.py  zarr_io.py
