[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "visioniceio"
version = "0.1.0"
description = "I/O utilities for ICe Vision Lab LabView data (DLTG binary format)"
readme = "README.md"
requires-python = ">=3.10"
license = "AGPL-3.0-only"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
authors = [{name = "FSchwarz, CIDBN"}]
keywords = ["neuroscience", "labview", "binary-io", "electrophysiology"]

dependencies = [
    "numpy>=1.22",
    "xarray>=2022.6",
    "zarr>=2.16",
    "numcodecs>=0.11",
]

[project.optional-dependencies]
test = ["pytest>=7.0", "pytest-cov"]
docs = ["sphinx>=6.0", "pydata-sphinx-theme>=0.14", "sphinx-design", "sphinxcontrib-mermaid>=0.9", "numpydoc", "myst-parser", "tomli; python_version < '3.11'"]
dev = ["ruff>=0.4", "build>=1.0", "twine>=5.0"]

[project.urls]
Repository = "https://github.com/VisionICeNatal/VisionICeIO"
Documentation = "https://VisionICeNatal.github.io/VisionICeIO/"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "N"]

[tool.ruff.lint.per-file-ignores]
"examples/*.ipynb" = ["F821"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers -v"

[tool.hatch.build.targets.wheel]
packages = ["visioniceio"]
